# asset-handoffer

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: config.witch-21-days.yaml
scripts/: install.bat
src/asset_handoffer/: __init__.py  cli.py  constants.py  core.py  exceptions.py  git.py  i18n.py  parsers.py
src/asset_handoffer/core/: __init__.py  config.py  exceptions.py  git_repo.py  i18n.py  parsers.py  path_generator.py  processor.py  protocols.py
src/asset_handoffer/core/locales/: en-US.yaml  zh-CN.yaml
src/asset_handoffer/locales/: en-US.yaml  zh-CN.yaml
src/asset_handoffer/templates/: config.yaml
tests/: test_config.py  test_core.py  test_parsers.py
